--- a/events.html
+++ b/events.html
@@ -102,12 +102,9 @@
             </p>
           </div>
           <div class="subscribe">
-            <form action="submit.html">
-              <input type="email" placeholder="Enter Your Email">
-              <input type="submit" value="Subscribe">
-
-            
-          </div>
+            <form action="submit.html">          
+            <input type="email" placeholder="Enter Your Email">
+              <input type="submit" value="Subscribe"></form> </div>
         </div>
       </div>
       <!-- End Events -->
