--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <li><a href="events.html">EVENTS</a></li>
               <li><a href="./explore.html">EXPLORE</a>
               </li>
-              <li><a href="contact-us.html">Contact us</a></li>
+              <li><a href="contact-us.html">Contact</a></li>
               <li><a href="./about-us.html">About</a>
               </li>
               <li>
